syntax = "proto3";
import "google/protobuf/empty.proto";

service Organism {
	rpc createCell(CellInfo) returns (ActionResult){}
	rpc killCell(UUID) returns (ActionResult){}
	rpc findCellsNearby(LocationRequest) returns (LocationResponse){}
	rpc getOrganismInfo(google.protobuf.Empty) returns (OrganismInfo){}
}

message UUID {
	bytes value = 1;
}

message LocationRequest {
	float x = 1;
	float y = 2;
	float distance = 3;
}

message OrganismInfo {
	int32 width = 1;
	int32 height = 2;
	int32 maxCellsOfType = 3;
}

message CellInfo {
	UUID id = 1;
	int32 type = 2;
	int32 size = 3;
	float speed = 4;
	float divideRate = 5;
	float x = 6;
	float y = 7;
	float angle = 8;
}

message LocationResponse {
	repeated CellInfo cells = 1;
}


message ActionResult {
	int32 result = 1;
}



